# TEST-LIBRDKAFKA

./: CMakeLists.txt
.github/workflows/: CI.yml
src/: main.cpp
